--- a/templates/pages.html
+++ b/templates/pages.html
@@ -25,7 +25,7 @@
         </div>
 
         <div class="row" style="text-align: center;">
-            <a href="{{img_url}}"><img src="{{img_url}}" /></a>
+            <a href="{{img_url}}" target="_blank"><img src="{{img_url}}" /></a>
         </div>
         <footer class="my-5 pt-5 text-muted text-center text-small">
             <!-- <p class="mb-1">&copy; 2017-2018 Company Name</p> -->
