--- a/templates/pages.html
+++ b/templates/pages.html
@@ -18,9 +18,17 @@
 
         <div class="row">
             {% for line in lines %}
+            {% if loop.index0 < 4 %}
+            <div class="col-md-12">
+                <p>{{index}}</p>
+            </div>
+            <div class="col-md-12">
+                <p>{{line_maps[loop.index0]}}</p>
+            </div>
             <div class="col-md-12" style="text-align: center;">
                 <p>{{line}}</p>
             </div>
+            {% endif %}
             {%endfor%}
         </div>
 
